Move refactoring working session into assignment

--- a/_lessons/assignment.html
+++ b/_lessons/assignment.html
@@ -44,3 +44,18 @@ For each exercise, we recommend you:
     - You will need to add your classmate as a [collaborator](https://help.github.jp/enterprise/2.11/user/articles/inviting-collaborators-to-a-personal-repository/)
 
 ---
+
+# 1. Refactor your project
+
+Based on our discussion in [Designing a data modeling project](modeling-project-design), refactor your project to be consistent with how we (Fishtown) structure our dbt projects. Consider
+- model naming
+- organization within directories
+
+## Bonus:
+Try using the [schema](https://docs.getdbt.com/docs/using-custom-schemas#section-what-is-a-custom-schema) configuration to split your models across multiple schemas
+
+## Related resources:
+- [Lesson](modeling-project-design)
+- [Discourse article on structuring projects](https://discourse.getdbt.com/t/how-we-structure-our-dbt-projects/355)
+
+---
