Move testing working session into assingment. Add CI exercise

--- a/_lessons/assignment.html
+++ b/_lessons/assignment.html
@@ -59,3 +59,19 @@ Try using the [schema](https://docs.getdbt.com/docs/using-custom-schemas#section
 - [Discourse article on structuring projects](https://discourse.getdbt.com/t/how-we-structure-our-dbt-projects/355)
 
 ---
+
+# 2. Add more tests to your project
+
+* Ensure that your `orders` model has at least one test on it (and it passes)
+
+## Related resources:
+- [docs.getdbt.com](https://docs.getdbt.com/docs/testing#section-schema-tests)
+
+---
+
+# 3. Set up your dbt project to run on CI
+(Optional)
+
+If you've been following a git flow (see earlier slide):
+* Create a deployment environment (related [tutorial](https://docs.getdbt.com/tutorial/deploy-your-project/))
+* Set up continuous integration (related [docs](https://docs.getdbt.com/tutorial/deploy-your-project/))
