--- a/_lessons/testing-ci.html
+++ b/_lessons/testing-ci.html
@@ -220,14 +220,13 @@ We use the scheduler in [dbt Cloud](cloud.getdbt.com) to run dbt in production.
 
 
 ---
-name: working-session
 class: subtitle
 
-# Working session
-* Ensure that your `orders` model has tests on it (and that they pass)
-
-.caption[
-  [Related dbt documentation](https://docs.getdbt.com/docs/testing#section-schema-tests)
-]
+# Knowledge check
+You should be able to:
+* Add tests to your models
+* Run your tests (all of them / one model at a time)
+* Explain how dbt tests work
+* Find the compiled SQL for tests
 
 {% include options/next_presentation.html %}
