Move docs working session into assignment

--- a/_lessons/assignment.html
+++ b/_lessons/assignment.html
@@ -87,3 +87,19 @@ If you've been following a git flow (see earlier slide):
 
 ## Related resources:
 * [docs.getdbt.com](https://docs.getdbt.com/docs/using-sources)
+
+---
+
+# 5. Add documentation to your project
+* Add a description for one (or all!) of the following:
+    * a model
+    * a source
+    * a column
+* Use a docs block for one of your descriptions
+* [dbt CLI users only] Generate the documentation website locally
+* Ensure your job in dbt Cloud is building documentation
+
+### Related resources
+* [docs.getdbt.com](https://docs.getdbt.com/docs/documentation)
+
+---
