Remove debugging working session

--- a/_lessons/debugging-dbt.html
+++ b/_lessons/debugging-dbt.html
@@ -39,7 +39,7 @@ class: subtitle, center, middle
         - actual data
 ]
 
-.right-column[        
+.right-column[
 - dbt "errors"
     - Model, source, or data test failure
     - Compilation error
@@ -162,8 +162,8 @@ Database Error: Snowflake absolutely hates the code you've written
 - Your model SQL has syntax errors
     - Missing a comma
     - Too many commas
-    - Your database will know this right away!  
-]  
+    - Your database will know this right away!
+]
 
 .right-column-66[
 .left-column[
@@ -307,15 +307,9 @@ Iterate:
 ]
 
 ---
-name: working-session
+
 class: subtitle
 
-# Working session
-* Break things!
-    * Write some bad SQL
-    * Write some bad YAML
-    * Break a test
-    * Use a bad `ref`
-* Fix things 😌
+# Questions?
 
 {% include options/next_presentation.html %}
