--- a/_lessons/packages.html
+++ b/_lessons/packages.html
@@ -115,7 +115,7 @@ background-color: #005E7A
 
 ---
 
-## Hold up, what about all those other macros?
+### Hold up, what about all those other macros?
 Even before we added `dbt_utils`, we had a ton of macros whenever we ran dbt.
 .center[
 <img src="/ui/img{{page.id}}/127-macros.png" style="width: 50%;">
