--- a/_lessons/sources.html
+++ b/_lessons/sources.html
@@ -148,7 +148,7 @@ name: working-session
 class: subtitle
 
 # Working session
-* Add `sources` for our two data sources: `jaffle_shop` and `stripe` (make sure you select from the `{{ source }}` in your models)
+* Add `sources` for our two data sources: `jaffle_shop` and `stripe` (make sure you select from the {% raw %}`{{ source }}`{% endraw %} in your models)
 * Add a freshness block to at least one source, and snapshot the freshness
     * Note: use a dummy `loaded_at_field` to get the freshness test to pass:
     ```yml
