--- a/_lessons/group-case-study.html
+++ b/_lessons/group-case-study.html
@@ -30,7 +30,7 @@ select * from raw.learn_stripe.refunds;
 ---
 
 # My typical process
-.dense-text[
+.denser-text[
 1. **What am I trying to build?**
     - Draw a dashboard or the table of data
     - Identify the grain
