--- a/_lessons/group-case-study.html
+++ b/_lessons/group-case-study.html
@@ -24,7 +24,7 @@ select * from raw.learn_stripe.refunds;
 ---
 
 # Discussion
-* What queries should go in dbt? Which part in out BI tool?
+* Which parts should go in dbt? Which in our BI tool?
 * How should you tackle this project?
 
 ---
