--- a/_lessons/dbtonic-jinja.html
+++ b/_lessons/dbtonic-jinja.html
@@ -8,7 +8,8 @@ class: title, center, middle
 
 # dbtonic Jinja
 
-### [Docs](https://docs.getdbt.com/docs/writing-code-in-dbt/jinja-context/adapter)
+### [Jinja Docs](https://jinja.palletsprojects.com/en/2.11.x/templates/) / [docs.getdbt.com](https://docs.getdbt.com/docs/writing-code-in-dbt/jinja-context/adapter)
+
 ???
 We've added to the Jinja library!
 ---
@@ -31,6 +32,7 @@ Use it always! This is how dbt:
 
 ## project-level vars
 
+.dense-text[
 
 ```yml
 # dbt_project.yml
@@ -44,45 +46,51 @@ models:
 select
   id,
   valid_from,
-  coalesce(valid_to, '{{ the_distant_future }}'::timestamp ) as valid_to
+  coalesce(valid_to, '{{ the_distant_future }}'::timestamp) as valid_to
 from {{ ref('stg_subscriptions') }}
 
 ```
+]
+
 --
+
+.dense-text[
 ```sql
 select
   id,
   valid_from,
-  coalesce(valid_to, '2099-12-31'::timestamp ) as valid_to
+  coalesce(valid_to, '2099-12-31'::timestamp) as valid_to
 from dbt_claire.stg_subscriptions
 ```
-
+]
 ---
 
 # Hot tip
 
 You can override global vars with a CLI flag:
-
+.dense-text[
 ```sql
 select
   id,
   valid_from,
-  coalesce(valid_to, '{{ the_distant_future}}'::timestamp ) as valid_to
+  coalesce(valid_to, '{{ the_distant_future}}'::timestamp) as valid_to
 from {{ ref('stg_subscriptions') }}
 ```
 
 ```bash
 dbt run --vars '{"the_distant_future": "2199-12-31"}'
 ```
+]
 --
+.dense-text[
 ```sql
 select
   id,
   valid_from,
-  coalesce(valid_to, '2199-12-31'::timestamp ) as valid_to
+  coalesce(valid_to, '2199-12-31'::timestamp) as valid_to
 from dbt_claire.stg_subscriptions
 ```
-
+]
 ---
 
 # Logging
@@ -116,11 +124,11 @@ analytics.stg_stripe_payment
 Especially useful when you're working on:
 - Complicated macros
 - Macros that call other macros
-- Macros that run introspective queries against the database*
-- Macros that are run as operations*
-- Custom materializations*
+- Macros that run introspective queries against the database¹
+- Macros that are run as operations¹
+- Custom materializations¹
 
-*Topics for later (or another time)!
+¹Topics for later (or another time)!
 ---
 
 # Comments
@@ -205,15 +213,18 @@ Macros introduce tradeoffs:
 * Using argument names for complex macros
 * Macro filenames that match macro names
 * Leveraging package macros where possible
+
+??
+## You hate to see it
+* Models that are entirely macros: https://github.com/Datavault-UK/snowflakeDemo/blob/master/models/load/stage/v_stg_inventory.sql
 ---
 class: subtitle
 # Knowledge check
 You should be able to:
-* Write Jinja to solve our example problem
-* Have a rough idea of when to use the Jinja docs vs. when to use the dbt docs
-* Know where to get started to write own macro
+* Use SQL + Jinja to pivot a table
+* Have a sense for when to use the Jinja docs vs. when to use the dbt docs
+* Know where to get started to write your own macro
 
 {% endraw %}
-
 
 {% include options/next_presentation.html %}
