--- a/_lessons/outro.html
+++ b/_lessons/outro.html
@@ -10,17 +10,12 @@ class: title, center, middle
 --
 
 * Tell people in your network about dbt
-* Get involved in dbt Slack (especially #events-mtl)
+* Get involved in dbt Slack
 * Write on Discourse
-* Pick up an issue on a package or dbt-core (check for the `good-first-issue` tag)
-* And ...
+* Pick up an issue on a package or dbt-core (check for the `good-first-issue` label)
 
 ---
-background-color: #FFFFFF
-class: middle
-<img src="/lessons/img/outro/coalesce-slide.png" class="img-center">
 
----
 class: title, center, middle
 
 # Feedback 🙏
@@ -30,4 +25,6 @@ class: title, center, middle
 ---
 class: title, center, middle
 
-# Awards 🏅
+# Certificates 🏅
+
+Please email [jeremy@fishtownanalytics.com](mailto:jeremy@fishtownanalytics.com) with your mailing address if you would like us to mail you a certificate.
