--- a/_lessons/docs.html
+++ b/_lessons/docs.html
@@ -72,7 +72,7 @@ not docs.getdbt.com, though those are also great
 
 ### Adding descriptions
 .dense-text[
-Descriptions can be added to models, sources, and column (in your existing `.yml` files)
+Descriptions can be added to models, sources, and columns (in your existing `.yml` files)
 ]
 {% raw %}
 
