--- a/_lessons/docs.html
+++ b/_lessons/docs.html
@@ -202,7 +202,7 @@ For example:
     - Known caveats
     - The definitions of poorly named fields and tables
 * Final models:
-    - The grain of the model. Potentially a descrition of how the model was built.
+    - The grain of the model. Potentially a description of how the model was built.
     - Column definitions, especially for columns that include business logic
 * Intermediate models
     - As required
