Edits per discussion Monday

--- a/_lessons/who-is-analytics-engineer.html
+++ b/_lessons/who-is-analytics-engineer.html
@@ -8,22 +8,32 @@ class: title, center, middle
 
 ---
 
-# What is your day-to-day?
+# Who are you?
 
-(And what do you call yourselves?)
+- [Intros!](https://docs.google.com/presentation/d/1nZC46kzxkuPeXRYtoIsNoG3tI7FiF4RUozarn8EMYGA/)
+- Where are you calling from? (city + room)
+- What does your day-to-day work look like?
 
 ---
 # The traditional data team
-- Data engineers:
-    - Build data warehouse infrastructure
-    - Extract & load data into your warehouse
-    - Transform data to make it easier to work with
-- Data analysts:
-    - Build dashboards & reports
-    - Insights work
-- Stakeholders:
-    - Politely wait for their analyst to give them numbers
 
+.left-column-33[
+#### Data Engineers
+- Build data warehouse infrastructure
+- Extract & load data into your warehouse
+- Transform data to make it easier to work with
+]
+.right-column-66[
+.left-column[
+#### Data Analyst
+- Build dashboards & reports
+- Insights work
+]
+.right-column[
+#### Stakeholder
+- Politely wait for their analyst to give them numbers
+]
+]
 
 ---
 # Modern data stack
@@ -39,7 +49,7 @@ class: title, center, middle
 Teaching notes:
 - flip back to traditional data team and annotate to show how it doesn't make sense anymore (cross parts out, arrow other parts around, particularly stakeholders not wanting to wait for the analysts)
 ---
-# Consequences of the modern data stack
+# Modern data stack: consequences
 .dense-text[
 Have you ever:
 - Had two stakeholder have different values for a KPI, and not been sure what was right?
@@ -84,9 +94,25 @@ All that and more... after the break!
 
 ---
 class: subtitle
-# The analytics engineering mindset
-## - Be curious
+# This course: distributed!
 
-## - Learn from each other
+.left-column[
+### Logistics
+- [Agenda](https://docs.google.com/spreadsheets/d/1DOvh06haGHlkiIrBJ5mDnOyZOf5HvZ0AaCsaJgjw3Rk/)
+- Zoom etiquette
+]
+--
+.right-column[
+### Values
+- Be curious
+- Learn from each other
+]
+--
+
+### Goals
+
+- Learning to be dbt superusers, analytics engineers, _and_ generous
+members of an open-source community :)
+- What are some of yours?
 
 {% include options/next_presentation.html %}
